added first migration to db and added indexviewmodel etc

--- a/targe21house/appsettings.json
+++ b/targe21house/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=targe21house;Trusted_Connection=true;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
